Add unit tests for linked_list.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -38,6 +38,7 @@ if(CMAKE_CROSSCOMPILING)
 else(CMAKE_CROSSCOMPILING)
 
     add_executable(CommonTest
+                   "test/test_linked_list.cpp"
                    "test/test_string.cpp"
                    "test/test_stdio.cpp"
                    "test/test_main.cpp"
