Add some vector tests.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -41,6 +41,7 @@ if(CMAKE_CROSSCOMPILING)
 else(CMAKE_CROSSCOMPILING)
 
     add_executable(CommonTest
+                   "test/test_vector.cpp"
                    "test/test_ring_buffer.cpp"
                    "test/test_linked_list.cpp"
                    "test/test_string.cpp"
