--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCE_FILES
     "include/flapjack_libc/stdlib.h" "src/stdlib.cpp"
 
     "include/common/line_editor.hpp" "src/line_editor.cpp"
+    "include/common/text_line.hpp" "src/text_line.cpp"
     "include/common/text_terminal.hpp" "src/text_terminal.cpp"
     "include/common/linked_list.hpp"
     "include/common/ring_buffer.hpp"
@@ -41,6 +42,7 @@ if(CMAKE_CROSSCOMPILING)
 else(CMAKE_CROSSCOMPILING)
 
     add_executable(CommonTest
+                   "test/test_text_line.cpp"
                    "test/test_vector.cpp"
                    "test/test_ring_buffer.cpp"
                    "test/test_linked_list.cpp"
