Added text_terminal and text_buffer tests

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -43,6 +43,7 @@ if(CMAKE_CROSSCOMPILING)
 else(CMAKE_CROSSCOMPILING)
 
     add_executable(CommonTest
+                   "test/test_text_terminal.cpp"
                    "test/test_text_buffer.cpp"
                    "test/test_text_line.cpp"
                    "test/test_vector.cpp"
