Kernel malloc zone is allocated dynamically in contiguous physical memory.
The kernel malloc zone is allocated in contiguous physical memory in the
kernel higher half, past the bss section. Pages for this are mapped on
demand when a page fault occurs.

Began stubbing out a page frame allocator. Though, this is not integrated
yet with the page fault handler which services the kernel heap.

--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -9,6 +9,7 @@ set(INCLUDE_FILES
     "include/interrupt_asm.h"
     "include/ltr.h"
     "include/seg.h"
+    "include/creg.h"
     )
 
 # By its nature, libKernelPlatformSupport is the pieces of the kernel which are
@@ -24,6 +25,7 @@ if(CMAKE_CROSSCOMPILING)
         "src/i386/interrupt_asm.S"
         "${CMAKE_CURRENT_BINARY_DIR}/isr_wrapper_asm.S"
         "src/i386/ltr.S"
+        "src/i386/creg.S"
         )
     GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/KernelPlatformSupport/src/i386/isr_wrapper_asm.S.erb"
                                "${CMAKE_CURRENT_BINARY_DIR}/isr_wrapper_asm.S")
