--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -21,7 +21,8 @@ set(SOURCE_FILES
     "src/ps2_keyboard_device/keyboard_scancodes_break_escaped.inc"
     "src/ps2_keyboard_device/keyboard_scancodes_make.inc"
     "src/kernel.cpp"
-    "src/brk.cpp"
+    "src/kernel_heap_allocator.cpp"
+    "include/mmu.hpp" "src/mmu.cpp"
     )
 
 GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/Kernel/src/isr_install.c.erb"
