The kernel heap uses the page frame allocator to get backing memory.
* Added a bit_array class and tests.
* The page frame allocator uses a bitmap to track free/used page frames.
* Extracted kernel_break_allocator from kernel_heap_allocator to fix
  problem of two-way dependency with page_frame_allocator.
* Extract new class cleanup_kernel_memory_map_operation
* Extract new class kernel_page_directory_populate_operation
* Extract new class kernel_memory_allocators to setup memory management.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SOURCE_FILES
     "include/common/memory_allocator.hpp"
     "include/common/minmax.hpp"
     "include/common/vec2.hpp"
+    "include/common/bit_array.hpp" "src/bit_array.cpp"
     )
 
 if(CMAKE_CROSSCOMPILING)
@@ -53,6 +54,7 @@ else(CMAKE_CROSSCOMPILING)
                    "test/test_linked_list.cpp"
                    "test/test_string.cpp"
                    "test/test_stdio.cpp"
+                   "test/test_bit_array.cpp"
                    "test/test_main.cpp"
                    )
 
