--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SOURCE_FILES
     "include/interrupt_lock.hpp" "src/interrupt_lock.cpp"
     "include/panic_interrupt_handler.hpp" "src/panic_interrupt_handler.cpp"
     "include/page_fault_interrupt_handler.hpp" "src/page_fault_interrupt_handler.cpp"
+    "include/logger.hpp" "src/logger.cpp"
     )
 
 GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/Kernel/src/isr_install.c.erb"
