x86_64 kernel boots and panics with "Hello, World!" message.
The 64-bit kernel panics with a "Hello, World" message. The 32-bit kernel
proceeds and runs normally. The reason for the controlled panic is that I
know the kernel isn't doing the right things yet for x86_64 and will crash.
The work to fix this has yet to be done.

Other changes:
* Stick arch-specific compiler flags in the toolchain files.
* KernelPlatformSupport uses separate source dirs for separate archs.
* Rename get_ebp() to get_frame_pointer(). Because the frame pointer is
  EBP on i386 and RBP on x86_64.
* Moved KERNEL_VIRTUAL_START_ADDR to a header in the Boot/ directory
* 32-bit and 64-bit kernels use a linker script generated from a template.
* Use GAS macros to make the 32-bit assembly boot code easier to read.
* panic() can print to the display even if it happens before the VGA text
  display device has been initialized.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,15 @@ project(FlapjackOS)
 
 enable_language(ASM)
 
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS ON)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+
 # Function to generate source code from a template file.
 function(GenerateSourceFromTemplate
          TEMPLATE_FILENAME
@@ -19,102 +28,93 @@ function(GenerateSourceFromTemplate
 
 endfunction(GenerateSourceFromTemplate)
 
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_EXTENSIONS ON)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
-set(COMMON_COMPILER_FLAGS "-O2 -Wall -Wextra -Werror")
 
 # Setup compiler flags before building the subdirectories.
+set(COMMON_COMPILER_FLAGS "-Wall -Wextra -Werror")
 if(CMAKE_CROSSCOMPILING)
 
     # When cross-compiling, we want to build free-standing executables with no
     # standard library as we cannot use the libc of the host system. Also, the
     # kernel must perform some magic to boot which is never done in userspace
     # programs.
-    set(CMAKE_C_FLAGS "-fno-stack-protector -nostdlib -ffreestanding ${COMMON_COMPILER_FLAGS}")
-    set(CMAKE_C_LINK_FLAGS "-nostdlib -ffreestanding")
+    set(COMPILER_FLAGS_C_AND_CXX "-O2 -mno-sse -mno-mmx -fno-stack-protector -nostdlib -ffreestanding")
+    if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
+        string(APPEND COMPILER_FLAGS_C_AND_CXX " -mcmodel=kernel")
+    endif()
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-exceptions -fno-rtti")
-    set(CMAKE_CXX_LINK_FLAGS "${CMAKE_C_LINK_FLAGS}")
+    set(LINKER_FLAGS_C_AND_CXX "-nostdlib -ffreestanding")
 
-else()
+    set(CMAKE_C_FLAGS "${COMMON_COMPILER_FLAGS} ${COMPILER_FLAGS_C_AND_CXX} ${CMAKE_C_FLAGS}")
+    set(CMAKE_C_LINK_FLAGS "${LINKER_FLAGS_C_AND_CXX} ${CMAKE_C_LINK_FLAGS}")
+
+    set(CMAKE_CXX_FLAGS "-fno-exceptions -fno-rtti ${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS} ${${COMMON_COMPILER_FLAGS}}")
+    set(CMAKE_CXX_LINK_FLAGS "${LINKER_FLAGS_C_AND_CXX} ${CMAKE_CXX_LINK_FLAGS}")
+
+else(CMAKE_CROSSCOMPILING)
 
     # When the target system is the host system, we are building natively.
     # In this case, define a flag to indicate we are doing testing and choose
     # some rather standard compiler flags.
-    set(CMAKE_C_FLAGS "-g -DTESTING ${COMMON_COMPILER_FLAGS}")
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
+    # Disable optimization so unit tests build faster. (25s versus 55s)
+    set(COMPILER_FLAGS_C_AND_CXX "-O0 -g -DTESTING")
+    set(CMAKE_C_FLAGS "${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS} ${CMAKE_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS} ${CMAKE_CXX_FLAGS}")
 
     # If we're building natively then we want to build tests.
     # Tests are defined in each library.
     enable_testing()
 
-endif()
+endif(CMAKE_CROSSCOMPILING)
+
 
 include_directories("3rdParty")
 
 add_subdirectory("Common")
-set(COMMON_LIBRARIES Common)
-set(COMMON_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Common")
-if(CMAKE_CROSSCOMPILING)
-    # Some of our headers have names that collide with the host libc.
-    # So, we omit those from the header search path unless building for
-    # a cross-compile.
-    set(COMMON_INCLUDE_DIRS
-        "${PROJECT_SOURCE_DIR}/Common/include"
-        "${PROJECT_SOURCE_DIR}/Common/include/flapjack_libc"
-        )
-else(CMAKE_CROSSCOMPILING)
-    set(COMMON_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Common/include")
-endif(CMAKE_CROSSCOMPILING)
-
 add_subdirectory("Malloc")
-set(MALLOC_LIBRARIES Malloc)
-set(MALLOC_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Malloc")
-set(MALLOC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Malloc/include")
-
 add_subdirectory("KernelPlatformSupport")
-set(KERNEL_PLATFORM_SUPPORT_LIBRARIES KernelPlatformSupport)
-set(KERNEL_PLATFORM_SUPPORT_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/KernelPlatformSupport")
-set(KERNEL_PLATFORM_SUPPORT_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/KernelPlatformSupport/include")
-
+add_subdirectory("Boot")
 add_subdirectory("Kernel")
-set(KERNEL_LIBRARIES Kernel)
-set(KERNEL_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Kernel")
-set(KERNEL_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Kernel/include")
+
 
 # If we're cross-compiling to the target architecture then build a bootable ISO.
 # We cannot do this when building natively because (as far as I know) there's no
 # way to use two toolchains simultaneously in CMake.
 if(CMAKE_CROSSCOMPILING)
 
-    include_directories(${KERNEL_INCLUDE_DIRS})
-    link_directories(${KERNEL_LIBRARIES_DIRS})
-
-    # The layout file specifies how the linker puts together the binary image.
-    set(KERNEL_LAYOUT_FILE "${PROJECT_SOURCE_DIR}/Boot/${CMAKE_SYSTEM_PROCESSOR}/kernel.ld")
-
-    # The linker produces a kernel binary image which is multiboot compliant and
-    # can actually be directly booted by Qemu.
+    # Add a target for the kernel binary image.
+    # We'll link the static libraries with the boot code using a custom linker
+    # script. The kernel has special linking requirements which vary between
+    # architectures. So, we generate the linker script from a template file too.
+    # Note that we specify the boot source file explicitly instead of, say,
+    # building a boot static library. The reason for this is that CMake insists
+    # that it needs at least one source file for the call to add_executable()
     set(KERNEL_BIN "kernel.bin")
-    set(KERNEL_LINK_FLAGS "-T ${KERNEL_LAYOUT_FILE}")
-    add_executable(${KERNEL_BIN} "${PROJECT_SOURCE_DIR}/Boot/${CMAKE_SYSTEM_PROCESSOR}/head.S")
-    set_target_properties(${KERNEL_BIN} PROPERTIES LINK_DEPENDS ${KERNEL_LAYOUT_FILE})
+    set(CPP_TOOL "${PROJECT_SOURCE_DIR}/scripts/preprocessor.sh")
+    set(BOOT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/Boot/${CMAKE_SYSTEM_PROCESSOR}")
+    set(KERNEL_LAYOUT_FILE "${CMAKE_CURRENT_BINARY_DIR}/kernel.ld")
+    set(KERNEL_LAYOUT_FILE_TEMPLATE "${PROJECT_SOURCE_DIR}/Boot/common/kernel.ld")
+    include_directories(${KERNEL_INCLUDE_DIRS} ${BOOT_INCLUDE_DIR})
+    link_directories(${KERNEL_LIBRARIES_DIRS})
+    add_executable(${KERNEL_BIN} "${BOOT_SOURCE_DIR}/boot.S")
+    if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
+        set(PREPROCESSOR_ARCHITECTURE "-m64")
+    else()
+        set(PREPROCESSOR_ARCHITECTURE "-m32")
+    endif()
+    add_custom_command(TARGET ${KERNEL_BIN}
+        PRE_LINK
+        COMMAND "${CPP_TOOL}" "${KERNEL_LAYOUT_FILE_TEMPLATE}" "${KERNEL_LAYOUT_FILE}" "-I ${BOOT_INCLUDE_DIR} ${PREPROCESSOR_ARCHITECTURE}"
+        DEPENDS "${CPP_TOOL}" "${KERNEL_LAYOUT_FILE_TEMPLATE}" "${BOOT_INCLUDE_DIR}/boot.h"
+    )
     target_link_libraries(${KERNEL_BIN}
-                          ${KERNEL_LIBRARIES}
-                          libgcc.a
-                          )
-    set_target_properties(
-        ${KERNEL_BIN} PROPERTIES
+        ${KERNEL_LIBRARIES}
+        libgcc.a
+    )
+    set_target_properties(${KERNEL_BIN} PROPERTIES
         LINKER_LANGUAGE C
         PREFIX ""
         SUFFIX ""
-        LINK_FLAGS ${KERNEL_LINK_FLAGS}
+        LINK_FLAGS "-T ${KERNEL_LAYOUT_FILE}"
     )
 
     # Add a custom target for the CD-ROM ISO image. Specify dependencies so that the
