--- a/Malloc/CMakeLists.txt
+++ b/Malloc/CMakeLists.txt
@@ -32,3 +32,7 @@ if(NOT CMAKE_CROSSCOMPILING)
     add_test(MallocTest ${CMAKE_CURRENT_BINARY_DIR}/MallocTest)
 
 endif(NOT CMAKE_CROSSCOMPILING)
+
+set(MALLOC_LIBRARIES Malloc PARENT_SCOPE)
+set(MALLOC_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/Malloc" PARENT_SCOPE)
+set(MALLOC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Malloc/include" PARENT_SCOPE)
