Rework PageFrameAllocatorFactory. It now configures w/ fewer dependencies.
* Rename PageFrameAllocatorFactory to *ConfigurationOperation. The class
  now configures a page frame allocator which has already been constructed.
* The page frame allocator is now a member of the KernelMemoryAllocators
  instance.
* Logic to enumerate page frames in the multiboot memory map has been
  extracted to a new class MemoryMapPageFrameEnumerator. This type is
  passed to the operation as a template parameter.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -26,7 +26,7 @@ set(SOURCE_FILES
     "include/kernel_break_allocator.hpp" "src/kernel_break_allocator.cpp"
     "include/mmu.hpp" "src/mmu.cpp"
     "include/page_frame_allocator.hpp"
-    "include/page_frame_allocator_factory.hpp" "src/page_frame_allocator_factory.cpp"
+    "include/page_frame_allocator_configuration_operation.hpp"
     "include/kernel_address_space_bootstrap_operation.hpp" "src/kernel_address_space_bootstrap_operation.cpp"
     "include/cleanup_kernel_memory_map_operation.hpp" "src/cleanup_kernel_memory_map_operation.cpp"
     "include/kernel_memory_allocators.hpp" "src/kernel_memory_allocators.cpp"
