Add unit tests for PageFrameAllocatorConfigurationOperation.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -67,6 +67,7 @@ if (NOT CMAKE_CROSSCOMPILING)
                    "test/test_gdt.cpp"
                    "test/test_idt.cpp"
                    "test/test_page_frame_allocator.cpp"
+                   "test/test_page_frame_allocator_configuration_operation.cpp"
                    "test/test_main.cpp"
                    )
 
