--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -1,20 +1,9 @@
 cmake_minimum_required(VERSION 3.6)
 
-set(INCLUDE_FILES
-    "include/gdt_asm.h"
-    "include/get_frame_pointer.h"
-    "include/halt.h"
-    "include/idt_asm.h"
-    "include/inout.h"
-    "include/interrupt_asm.h"
-    "include/ltr.h"
-    "include/seg.h"
-    "include/creg.h"
-    )
-
-# By its nature, libKernelPlatformSupport is the pieces of the kernel which are
-# literally untestable. When we're building for the host, e.g. when building
-# unit tests, we end up replacing most of these functions with stubs.
+# libKernelPlatformSupport contains some pieces which cannot be tested. These
+# generally require a compile-time or link-time seam and involve platform-
+# specific assembly code. When we're building for unit testing, we replace
+# these functions with stubs.
 if(CMAKE_CROSSCOMPILING)
     set(SOURCE_FILES
         "src/${CMAKE_SYSTEM_PROCESSOR}/gdt_asm.S"
@@ -44,9 +33,41 @@ else(CMAKE_CROSSCOMPILING)
                                "${CMAKE_CURRENT_BINARY_DIR}/isr_wrapper.c")
 endif(CMAKE_CROSSCOMPILING)
 
-include_directories("include")
+list(APPEND SOURCE_FILES
+     "include/gdt_asm.h"
+     "include/get_frame_pointer.h"
+     "include/halt.h"
+     "include/idt_asm.h"
+     "include/inout.h"
+     "include/interrupt_asm.h"
+     "include/ltr.h"
+     "include/seg.h"
+     "include/creg.h"
+     "include/page_size.hpp"
+     "include/logical_addressing.hpp"
+     "include/platform/i386/protection_flags.hpp"
+     "include/platform/i386/page_directory.hpp" "src/platform/i386/page_directory.cpp"
+     "include/platform/i386/page_directory_entry.hpp" "src/platform/i386/page_directory_entry.cpp"
+     "include/platform/i386/page_table.hpp" "src/platform/i386/page_table.cpp"
+     "include/platform/i386/page_table_entry.hpp" "src/platform/i386/page_table_entry.cpp"
+     "include/platform/i386/physical_memory_map.hpp" "src/platform/i386/physical_memory_map.cpp"
+     "include/platform/i386/mmu.hpp" "src/platform/i386/mmu.cpp"
+     "include/platform/i386/kernel_address_space_bootstrapper.hpp" "src/platform/i386/kernel_address_space_bootstrapper.cpp"
+     )
+
+include_directories("include"
+                    ${COMMON_INCLUDE_DIRS}
+                    ${BOOT_INCLUDE_DIR}
+                    )
+
+link_directories(${COMMON_LIBRARIES_DIR}
+                 )
 
 add_library(KernelPlatformSupport STATIC ${SOURCE_FILES})
+
+target_link_libraries(KernelPlatformSupport
+                      ${COMMON_LIBRARIES}
+                      )
 
 set(KERNEL_PLATFORM_SUPPORT_LIBRARIES KernelPlatformSupport PARENT_SCOPE)
 set(KERNEL_PLATFORM_SUPPORT_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/KernelPlatformSupport" PARENT_SCOPE)
