Extract code for configuring the hardware interrupt controller.
The new class i386::HardwareInterruptController provides a platform-
agnostic interface to the hardware interrupt controller. The goal is to be
able to swap this out on different platforms via the kernel policy.

--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -45,6 +45,8 @@ list(APPEND SOURCE_FILES
      "include/creg.h"
      "include/page_size.hpp"
      "include/logical_addressing.hpp"
+     "include/platform/i386/idt.h" "src/platform/i386/idt.c"
+     "include/platform/i386/isr_install.h" "${CMAKE_CURRENT_BINARY_DIR}/i386_isr_install.c"
      "include/platform/i386/protection_flags.hpp"
      "include/platform/i386/page_directory.hpp" "src/platform/i386/page_directory.cpp"
      "include/platform/i386/page_directory_entry.hpp" "src/platform/i386/page_directory_entry.cpp"
@@ -56,7 +58,12 @@ list(APPEND SOURCE_FILES
      "include/platform/i386/hardware_task_configuration.hpp" "src/platform/i386/hardware_task_configuration.cpp"
      "include/platform/i386/gdt.h" "src/platform/i386/gdt.c"
      "include/platform/i386/tss.h"
+     "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
+     "include/platform/pc/pic.h" "src/platform/pc/pic.c"
      )
+
+GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/KernelPlatformSupport/src/platform/i386/isr_install.c.erb"
+                           "${CMAKE_CURRENT_BINARY_DIR}/i386_isr_install.c")
 
 include_directories("include"
                     ${COMMON_INCLUDE_DIRS}
@@ -75,6 +82,7 @@ target_link_libraries(KernelPlatformSupport
 if (NOT CMAKE_CROSSCOMPILING)
 
     add_executable(KernelPlatformSupportTest
+                   "test/test_idt.cpp"
                    "test/test_gdt.cpp"
                    "test/test_main.cpp"
                    )
